--- a/extensions/blocks/contact-info/editor.scss
+++ b/extensions/blocks/contact-info/editor.scss
@@ -1,5 +1,5 @@
 .jetpack-contact-info-block {
-	padding: 10px 18px;
+	padding: 10px 0;
 	/* css class added to increase specificity */
 	.editor-plain-text.editor-plain-text:focus {
 		box-shadow: none;
